--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/html/public
+    DocumentRoot /var/www/html/storage
 
     <Directory "/var/www/html">
         AllowOverride all
