--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -27,3 +27,5 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 RUN chown -R www-data:www-data /var/www/html \
     && a2enmod rewrite
 
+RUN chown -R $USER:$USER ~/laravel-docker
+COPY --chown=www:www . /var/www/html/public/storage
