--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -2,8 +2,10 @@
     DocumentRoot /var/www/html/public
 
     <Directory "/var/www/html">
-        AllowOverride all
-        Require all granted
+         AllowOverride All
+         Options -Indexes +FollowSymLinks
+         Order allow,deny
+         Allow from all
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
